k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sav-router
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: http-to-https-redirect
    kubernetes.io/ingress.global-static-ip-name: stag-ip-address
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sav-iam-frontend
            port:
              number: 80
      - path: /app/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sav-frontend
            port:
              number: 80
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sav-backend
            port:
              number: 80
